extends Node2D
#Player Goat

var player2 = true
onready var all_Placed


# Called when the node enters the scene tree for the first time.
func _ready():
	all_Placed = 0








func _on_Tiger_AI_Algorithm_dragandfropturnfinished():
	player2 = true


func _on_Tiger_AI_Algorithm2_dragandfropturnfinished():
	player2 = true


func _on_Tiger_AI_Algorithm3_dragandfropturnfinished():
	player2 = true


func _on_Tiger_AI_Algorithm4_dragandfropturnfinished():
	player2 = true
